[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value", "preserve_order"] }
roxmltree = "0.19"
toml = "0.8"
thiserror = "1"
tendermint = "0.34"
tendermint-rpc = { version = "0.34", features = ["http-client"] }
log = "0.4"
pretty_env_logger = "0.5"
ed25519-dalek = "2.1"
base64 = "0.21"
hex = "0.4"
uuid = { version = "1.7", features = ["v4", "macro-diagnostics", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }
sha2 = "0.10"
parking_lot = "0.12"
rand = "0.8"
async-trait = "0.1"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_EventLog"] }
lazy_static = "1.4"
sled = "0.34"
backoff = { version = "0.4", features = ["tokio"] }
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots", "json"] }
url = { version = "2.5", features = ["serde"] }
duration-str = "0.7"

[dev-dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
tempdir = "0.3"